updated mongo-api service
